syntax = "proto3";

package zainokta.example.service1;
option go_package = "service1/rpc/serviceone";

service ServiceOne {
  rpc MakeHat(Size) returns (Hat);
  rpc GetHat(ID) returns (Hat);
}

message ID {
  string id = 1;
} 

message Size {
  int32 inches = 1; // must be > 0
}

message Hat {
  string id = 1;
  int32 inches = 2;
  string color = 3; // anything but "invisible"
  string name = 4; // i.e. "bowler"
}